@@ -82,6 +82,9 @@ Version 1.4.4 - CVS
   - LDAP backend will use internal squirrelmail charset conversion functions
     instead of php xml extension. Closes bug #655137.
   - Fix two time zone calculation bugs, thanks to David White
+  - Handle a reload of the signout page gracefully: do not present an error
+    about having to be logged in to be able to sign out.
+
 
 Version 1.4.3a - 2 June 2004
 ----------------------------
